<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- About -->
    <string name="link">Website: github.com/dkim0419/SoundRecorder</string>

    <!-- Toolbar -->
    <string name="app_name">Sound Recorder</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>

    <!-- Preferences -->
    <string name="pref_high_quality_key">pref_high_quality</string>
    <string name="pref_high_quality_title">Enable High Quality Recording</string>
    <string name="pref_high_quality_desc">Record in CD Quality</string>
    <string name="pref_ftp_transfer_key">pref_ftp_transfer</string>
    <string name="pref_ftp_transfer_title">Enable FTP Transfer</string>
    <string name="pref_ftp_transfer_desc">Transfer Recording to FTP Site</string>
    <string name="pref_ftp_host_key">pref_ftp_host</string>
    <string name="pref_ftp_host_title">FTP Host</string>
    <string name="pref_ftp_dir_key">pref_ftp_dir</string>
    <string name="pref_ftp_dir_title">FTP Directory</string>
    <string name="pref_ftp_user_key">pref_ftp_user</string>
    <string name="pref_ftp_user_title">FTP Username</string>
    <string name="pref_ftp_passwd_key">pref_ftp_passwd</string>
    <string name="pref_ftp_passwd_title">FTP Password</string>

    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc">v%s</string>

</resources>
